--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
     "presets": [
-        "react", "env", "stage-2"
-    ]
+        ["env", {"modules": false}],
+         "es2015",
+         "react",
+         "stage-2"
+    ],
+    "plugins": ["transform-class-properties"]
 }
-
-        //"es2015", "react"
