--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "axios": "^0.17.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "express": "^4.16.2",
     "gemoji": "^4.2.0",
     "jest": "^22.0.4",
-    "react-test-renderer": "^16.0.0-alpha.12",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
@@ -28,7 +30,7 @@
     "webpack-dev-server": "^2.9.4",
     "webpack-hot-middleware": "^2.20.0",
     "webpack-middleware": "^1.5.1"
-    },
+  },
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/reactTests/__mocks__/fileMock.js",
@@ -38,8 +40,8 @@
       "<rootDir>/node_modules/",
       "<rootDir>/legacy_notes_and_workbook/",
       "<rootDir>/client/src/stylesheets/"
-      ]
-    },
+    ]
+  },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
